ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail082.hs
module Main(main) where
import Data82
import Inst82_1
import Inst82_2

data Baz = Baz deriving Read

main     = print ((read "FooData")::FooData)

