ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail082.stderr

tcfail082.hs:2:1: error:
    Could not find module ‘Data82’
    Use -v to see a list of the files searched for.

tcfail082.hs:3:1: error:
    Could not find module ‘Inst82_1’
    Use -v to see a list of the files searched for.

tcfail082.hs:4:1: error:
    Could not find module ‘Inst82_2’
    Use -v to see a list of the files searched for.
